--- a/frontend/src/components/table/Table.css
+++ b/frontend/src/components/table/Table.css
@@ -77,6 +77,7 @@
 .editable-table-modal-actions {
   margin-top: 12px;
   display: flex;
+  justify-content: center;
   align-items: center;
   gap: 8px;
 }
